<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="60dp">

    <ImageView
        android:id="@+id/item_recipe_ingredient_icon_image_view"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/vegetarian_food_filled50"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"/>

    <EditText
        android:id="@+id/item_recipe_ingredient_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/ingredient_name"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:layout_toEndOf="@+id/item_recipe_ingredient_icon_image_view"
        android:layout_toStartOf="@id/item_recipe_ingredient_add_button"/>


    <ImageButton
        android:id="@+id/item_recipe_ingredient_add_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="?attr/colorAccent"
        android:src="@drawable/plus_math_filled30"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_alignParentEnd="true"
        />

    </RelativeLayout>

    <ListView
        android:id="@+id/shoppinglist_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </ListView>

</LinearLayout>